# recommender-systems-course

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  Dockerfile  README.rst  appveyor.yml  environment.yml  local-build.sh  mypy.ini  project_task.csv  pyproject.toml  spelling.dict
.circleci/: config.yml
doc/: requirements.txt
doc/source/: api-doc.rst  conf.py  course-desc.rst  index.rst
lectures/lecture1/: lecture.tex
lectures/lecture7/: lecture.tex
lectures/lecture8/: lecture.tex
notebooks/: usage-example.ipynb
rs_course/: __init__.py  cf_als.py  cf_svd.py  cold_start.py  collaborative_filtering_knn.py  conftest.py  content_based_knn.py  dnn_rs.py  factorisation_machines.py  factorization_machines.py  lightfm_bpr.py  popular.py  rs_params.py  turi_fm.py  utils.py
scripts/: mega_script.py  project_task_generator.py  slim_recommender.py  test_vw.sh  train_vw.sh
tasks/: task1.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md
tests/: test_a_recommender.py
