[tool.poetry]
name = "rs_course"
version = "0.0.3"
description = "A course on Recommender Systems"
authors = ["Boris Shminke <boris@shminke.ml>"]
license = "Apache-2.0"
readme = "README.rst"
classifiers=[
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Typing :: Typed"
]
include = ["rs_course/py.typed"]

[tool.poetry.dependencies]
python = ">= 3.7.1, <3.9"
rs-datasets = "*"
rs-metrics = "*"
pandas = "*"
lightfm = "*"
torch = "*"
implicit = "*"
spotlight = {git="https://github.com/maciejkula/spotlight.git", branch="v0.1.6"}
vowpalwabbit = "*"

[tool.poetry.dev-dependencies]
pylint = "*"
mypy = "*"
pre-commit = "*"
black = "*"
flake8 = "*"
jupyterlab = "*"
data-science-types = "*"
pytest-cov = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
ipywidgets = "*"

[tool.black]
line-length=79

[tool.isort]
profile = "black"
src_paths = ["rs_course"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
