[tool.poetry]
name = "rs_course"
version = "0.0.5"
description = "A course on Recommender Systems"
authors = ["Boris Shminke <boris@shminke.ml>"]
license = "Apache-2.0"
readme = "README.rst"
classifiers=[
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Development Status :: 3 - Alpha",
	"Environment :: Console",
	"Natural Language :: English",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
	"Typing :: Typed"
]
include = ["rs_course/py.typed"]

[tool.poetry.dependencies]
python = ">= 3.7.1, <3.10"
rs-datasets = "*"
rs-metrics = "*"
pandas = "*"
lightfm = "*"
torch = "*"
implicit = "*"
vowpalwabbit = "*"
recbole = "*"

[tool.poetry.dev-dependencies]
pylint = "*"
mypy = "*"
pre-commit = "*"
black = "*"
flake8 = "*"
jupyterlab = "*"
data-science-types = "*"
pytest-cov = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
ipywidgets = "*"
tox = "*"
tbump = "*"

[tool.black]
line-length=79

[tool.isort]
profile = "black"
src_paths = ["rs_course"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """--doctest-modules --cov rs_course --cov-report term-missing
   --cov-report xml --cov-fail-under=95 --junit-xml test-results/rs_course.xml
"""
testpaths = ["rs_course"]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"

[tool.pylint.format]
ignore-long-lines = "(https://)"
max-line-length = 79

[tool.pylint.design]
max-statements = 10

[tool.pylint.typecheck]
generated-members = ["torch"]

[tool.mypy]
show_error_codes = true
incremental = false
disable_error_code = "no-redef"

[[tool.mypy.overrides]]
module = [
    "recbole.*",
    "implicit.*",
    "tqdm.*",
    "lightfm.*",
    "rs_datasets.*",
    "rs_metrics.*",
    "sklearn.*",
    "scipy.*",
    "vowpalwabbit.*",
    "SLIM.*",
]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py37,py38,py39

[testenv]
deps =
    pytest-cov
    flake8
    pylint
    mypy
    data-science-types
commands =
    flake8 rs_course
    pylint rs_course
    mypy rs_course
    pytest
"""

[tool.tbump]
github_url = "https://github.com/inpfess/recommender-systems-course/"

[tool.tbump.version]
current = "0.0.5"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "rs_course/__init__.py"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "doc/source/conf.py"
